# exam_bank

./: .dockerignore  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  _tmp_check_review.js  docker-compose.yml  nginx.conf  test-title-fix.db  word_exam_bank.db
backend/: ocr_probe.ps1  pyproject.toml  run_uvicorn.cmd  test-temp.db  word_exam_bank.db  worker1_test.db
backend/app/: main.py
backend/app/core/: settings.py
backend/app/db/: __init__.py  models.py  session.py
backend/app/parser/: docx_reader.py  mathtype.py  normalize.py  question_splitter.py  small_image_ocr.py  types.py
backend/app/services/: import_service.py  log_service.py  paper_lifecycle_service.py  practice_service.py  review_service.py  search_service.py  tag_service.py
backend/app/tagging/: rules.py  types.py
backend/migrations/: env.py
backend/migrations/versions/: 20260516_0001_initial_schema.py  20260517_0001_practice_state.py  20260517_0002_paper_source_hash.py
backend/tests/: conftest.py
backend/tests/api/: test_import_api.py  test_import_formula_text_passthrough.py  test_import_table_blocks.py  test_paper_detail_api.py  test_practice_api.py  test_review_api.py  test_search_api.py  test_short_answer_stem_blocks.py  test_tags_api.py
backend/tests/db/: test_metadata.py
backend/tests/e2e/: test_sample_import.py  test_sample_search.py
backend/tests/fixtures/: 2025-suzhou-math-exam.docx  ~$25-suzhou-math-exam.docx
backend/tests/parser/: test_docx_reader.py  test_mathtype.py  test_mathtype_fraction_parens.py  test_question_splitter.py  test_small_image_ocr.py
(+67 files in other folders)
